--- a/index.html
+++ b/index.html
@@ -9,60 +9,32 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <style>
-    /* Style The Dropdown Button */
-
-
-    /* The container <div> - needed to position the dropdown content */
-    .dropdown {
-        position: relative;
-        display: inline-block;
-    }
-
-    /* Dropdown Content (Hidden by Default) */
-    .dropdown-content {
-        display: none;
-        position: absolute;
-        background-color: #f9f9f9;
-        min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-        z-index: 1;
-    }
-
-    /* Links inside the dropdown */
-    .dropdown-content a {
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-    }
-
-    /* Change color of dropdown links on hover */
-    .dropdown-content a:hover {
-        background-color: #f1f1f1
-    }
-
-    /* Show the dropdown menu on hover */
-    .dropdown:hover .dropdown-content {
-        display: block;
-    }
-
-    /* Change the background color of the dropdown button when the dropdown content is shown */
-    .dropdown:hover .dropbtn {
-        background-color: #3e8e41;
-    }
+ 
 </style>
 
 <body style="max-height:100vh;">
     <header class="bg-success" style="height: 200px;">
-        <div class="dropdown">
-            <button class="btn btn-primary">Dropdown</button>
-            <div class="dropdown-content" id="contenuRaccourci">
 
-            </div>
-        </div>
+
+        <div class="dropdown">
+            <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+              Dropdown button
+            </button>
+            <ul class="dropdown-menu" id="contenuRaccourci">
+             
+            </ul>
+          </div>
     </header>
     <div class="container-fluid bg-black" style=" max-height: calc(100vh - 300px);overflow: scroll;">
+<div class="row" style="height: 1000px;background-color: bisque;">
+ <div class="row mt-2">
+<div class="col-4 bg-primary"style="position: relative;"><div style="position: absolute;top:50%;height: 150px;width: 150px;background-color: brown;"></div><div style="position: relative;height: 150px;width: 150px;background-color: brown;"></div><div style="position: relative;height: 150px;width: 150px;background-color: brown;"></div></div>
+<div class="col-4 bg-success"style="position: relative;"><div style="position: absolute;height: 150px;width: 150px;background-color: rgb(39, 18, 224);left: 100px;"></div></div>
+<div class="col-4 bg-danger"style="position: relative;"><div style="height: 150px;width: 150px;background-color: rgb(11, 240, 49);position: relative;left: 100px;"></div></div>
+ </div>
 
+
+</div>
 
         <div class="row">
             <div class="col-4">
@@ -201,9 +173,13 @@
 
     // Parcourez la liste d'éléments et récupérez leur contenu texte
     for (var i = 0; i < elements.length; i++) {
-        var newraccourci = document.createElement('a');
+
+        var liaccourci = document.createElement('li');
+        var araccourci = document.createElement('a');
         var contenuTexte = elements[i].textContent;
-        newraccourci.textContent = contenuTexte;
-        newraccourci.href = "#" + contenuTexte;
-        dropdown.appendChild(newraccourci);
+        araccourci.textContent = contenuTexte;
+        araccourci.href = "#" + contenuTexte;
+        araccourci.classList.add('dropdown-item');
+        liaccourci.appendChild(araccourci);
+        dropdown.appendChild(liaccourci);
     }</script>
